feat(crops): added methods GET and POST to endpoint of crops